package logica;

public interface Conducir {
        public void conducir();
    }

